@@ -12,7 +12,7 @@ RANLIB = ranlib
 COPY = copy clone buf=0
 DELETE = delete all quiet
 MAKEDIR = makedir
-MAKE = make -f GNUmakefile.68k
+MAKE = $(MAKE_COMMAND) -f GNUmakefile.68k
 
 ##############################################################################
 
