@@ -82,7 +82,7 @@ __dirent_unlock(void)
 
 /****************************************************************************/
 
-CLIB_CONSTRUCTOR(__dirent_init)
+CLIB_CONSTRUCTOR(dirent_init)
 {
 	BOOL success = FALSE;
 
@@ -112,7 +112,7 @@ CLIB_CONSTRUCTOR(__dirent_init)
 
 /****************************************************************************/
 
-CLIB_DESTRUCTOR(__dirent_exit)
+CLIB_DESTRUCTOR(dirent_exit)
 {
 	ENTER();
 
