@@ -71,7 +71,7 @@ double __huge_val;
 
 /****************************************************************************/
 
-MATH_DESTRUCTOR(__math_exit)
+MATH_DESTRUCTOR(math_exit)
 {
 	#if defined(IEEE_FLOATING_POINT_SUPPORT)
 	{
@@ -98,7 +98,7 @@ MATH_DESTRUCTOR(__math_exit)
 
 /****************************************************************************/
 
-MATH_CONSTRUCTOR(__math_init)
+MATH_CONSTRUCTOR(math_init)
 {
 	BOOL success = FALSE;
 
