@@ -115,7 +115,7 @@ UBYTE * __base;
 
 /****************************************************************************/
 
-STK_CONSTRUCTOR(__stk_init)
+STK_CONSTRUCTOR(stk_init)
 {
 	struct Task * this_task = FindTask(NULL);
 	ULONG lower = (ULONG)this_task->tc_SPLower;
