@@ -60,7 +60,7 @@ struct UserGroupIFace * __IUserGroup;
 
 /****************************************************************************/
 
-CLIB_DESTRUCTOR(__usergroup_exit)
+CLIB_DESTRUCTOR(usergroup_exit)
 {
 	ENTER();
 
@@ -85,7 +85,7 @@ CLIB_DESTRUCTOR(__usergroup_exit)
 
 /****************************************************************************/
 
-CLIB_CONSTRUCTOR(__usergroup_init)
+CLIB_CONSTRUCTOR(usergroup_init)
 {
 	struct TagItem tags[2];
 	BOOL success = FALSE;
