@@ -70,6 +70,10 @@
   setjmp(). This is now done within stdlib_main.c prior to
   calling the destructor function invocation code.
 
+- Fixed the SAS/C destructor function prototypes and verified
+  that the constructors/destructors are called in the proper
+  order, too.
+
 
 c.lib 1.189 (5.3.2005)
 
